--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "deepmerge": "^3.2.0",
+    "lodash": "^4.17.15",
     "normalize.css": "^8.0.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.0",
