--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,8 @@
     "es6": true
   },
   "rules": {
-    "prettier/prettier": ["error"]
+    "prettier/prettier": ["error"],
+    "no-case-declarations": "off"
   },
   "settings": {
     "react": {
