--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.18",
     "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "classnames": "^2.2.6",
     "deepmerge": "^3.2.0",
     "lodash": "^4.17.15",
     "normalize.css": "^8.0.0",
