--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "redan": "^0.2.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "socket.io-client": "^2.2.0"
+    "socket.io-client": "^2.2.0",
+    "url-loader": "^2.1.0"
   }
 }
